--- a/AK-Site/src/styles/main.css
+++ b/AK-Site/src/styles/main.css
@@ -9,3 +9,4 @@
 @import './layout/hero.css';
 @import './layout/sections.css';
 @import './layout/responsive.css';
+@import './pages/insurance-page.css';
