--- a/AK-Site/src/styles/layout/hero.css
+++ b/AK-Site/src/styles/layout/hero.css
@@ -104,6 +104,7 @@
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
     gap: 32px;
     margin-top: 48px;
+    justify-content: center;
 }
 
 .insurance-icon {
