--- a/AK-Site/src/styles/main.css
+++ b/AK-Site/src/styles/main.css
@@ -10,3 +10,4 @@
 @import './layout/sections.css';
 @import './layout/responsive.css';
 @import './pages/insurance-page.css';
+@import './pages/mortgagecalculator.css';
